--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,5 @@
+
+
 html,
 body {
   padding: 0;
@@ -6,6 +8,7 @@ body {
   scroll-behavior: smooth;
   color: white;
   position: relative;
+  background: rgb(14,12,20);
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
@@ -30,4 +33,28 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.typewriter h1 {
+  overflow: hidden;
+  border-right: .15em solid #eee;
+  white-space: nowrap;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  letter-spacing: .02em;
+  animation:
+          typing 1.5s steps(30, end),
+          blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: #eee }
 }
