--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,3 @@
-
-
 html,
 body {
   padding: 0;
@@ -8,7 +6,7 @@ body {
   scroll-behavior: smooth;
   color: white;
   position: relative;
-  background: rgb(14,12,20);
+  background: rgb(14, 12, 20);
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
@@ -37,24 +35,31 @@ a {
 
 .typewriter h1 {
   overflow: hidden;
-  border-right: .15em solid #eee;
+  border-right: 0.15em solid #eee;
   white-space: nowrap;
   margin: 0 auto;
   margin-bottom: 30px;
-  letter-spacing: .02em;
-  animation:
-          typing 1.5s steps(30, end),
-          blink-caret .5s step-end infinite;
+  letter-spacing: 0.02em;
+  animation: typing 1.5s steps(30, end), blink-caret 0.5s step-end infinite;
 }
 
 /* The typing effect */
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 /* The typewriter cursor effect */
 @keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: #eee }
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: #eee;
+  }
 }
