--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -10,6 +14,13 @@ body {
 
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   -webkit-tap-highlight-color: transparent;
+}
+
+@media (max-width: 768px) {
+  html,
+  body {
+    font-size: 14px;
+  }
 }
 
 *,
@@ -33,33 +44,4 @@ a {
   text-decoration: none;
 }
 
-.typewriter h1 {
-  overflow: hidden;
-  border-right: 0.15em solid #eee;
-  white-space: nowrap;
-  margin: 0 auto;
-  margin-bottom: 30px;
-  letter-spacing: 0.02em;
-  animation: typing 1.5s steps(30, end), blink-caret 0.5s step-end infinite;
-}
 
-/* The typing effect */
-@keyframes typing {
-  from {
-    width: 0;
-  }
-  to {
-    width: 100%;
-  }
-}
-
-/* The typewriter cursor effect */
-@keyframes blink-caret {
-  from,
-  to {
-    border-color: transparent;
-  }
-  50% {
-    border-color: #eee;
-  }
-}
