--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -43,3 +43,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+.borderGradient {
+  background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
