--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   font-size: 16px;
   scroll-behavior: smooth;
-  color: white;
+  color: #222222;
   position: relative;
   background: rgb(14, 12, 20);
 
@@ -46,4 +46,25 @@ a {
 
 .borderGradient {
   background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+
+.purpleDot {
+  background: radial-gradient(79.4% 100% at 25.1% 100%,#D261FF 0%,rgba(210,97,255,0) 100%);
+  position: absolute;
+}
+
+.skyDot {
+  background: radial-gradient(57.3% 100% at 76.2% 100%,#00a6ff 0%,rgba(0,187,255,0) 100%);
+  position: absolute;
+}
+
+.sessionGradient {
+  background: linear-gradient(45deg,#0088ff 0%, rgb(0, 204, 255) 100%)
+}
+
+.rainbowBorder {
+  border-radius: 10px;
+  border: 2px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
 }
