--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -67,6 +67,43 @@ a {
   background: linear-gradient(45deg, #0088ff 0%, rgb(0, 204, 255) 100%);
 }
 
+.sessionCard {
+  perspective: 500px;
+}
+
+.card {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transform: rotateY(0deg);
+  transition: 1s;
+  transform-style: preserve-3d;
+}
+
+.card-side {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card-side-front {
+  z-index: 1;
+}
+
+.card-side-back {
+  transform: rotateY(180deg);
+}
+
+.sessionCard:hover .card {
+  transform: rotateY(180deg);
+}
+
 .locationGradient {
   background: linear-gradient(90deg, rgb(0, 153, 255) 0%, rgb(191, 0, 255) 100%);
 }
@@ -77,6 +114,8 @@ a {
   border-image-slice: 1;
   border-image-source: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
 }
+
+
 
 .countDownWrapper {
   --border-bottom-width: 1px;
