--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -154,3 +154,29 @@ a {
   z-index: 100;
   color: rgb(17, 17, 17);
 }
+
+.diamondColorGradient {
+  background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
+}
+
+.platinumColorGradient {
+  background: linear-gradient(to right, #E1E4E3 0%, #C5C8C6 25%, #A9ABA9 50%, #C5C8C6 75%, #E1E4E3 100%);
+}
+
+.goldColorGradient {
+  background: linear-gradient(to right, #FFD700 0%, #F4A460 25%, #E06633 50%, #F4A460 75%, #FFD700 100%);
+}
+
+.silverColorGradient {
+  background: linear-gradient(to right, #C0C0C0 0%, #A9A9A9 25%, #808080 50%, #A9A9A9 75%, #C0C0C0 100%);
+}
+
+.bronzeColorGradient {
+  background: linear-gradient(to right, #B87333 0%, #A95F2B 25%, #9A4B23 50%, #A95F2B 75%, #B87333 100%);
+}
+
+.etcColorGradient {
+  background: linear-gradient(315deg,#00f6ff 0%,hsl(250,100%,50%) 100%)
+}
+
+
