--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -179,5 +179,79 @@ a {
   background: linear-gradient(315deg, #00f6ff 0%, hsl(250, 100%, 50%) 100%);
 }
 
-.mobileNav {
+.bannerGradient {
+  background: linear-gradient(135deg, #00f6ff 0%, rgb(123, 200, 212), rgb(255, 255, 255));
+}
+
+.mint-border {
+  border-radius: 10px;
+  border-bottom: 2px solid;
+  border-image-slice: 1;
+  border-image-source: linear-gradient(315deg, #00f6ff 0%,  rgb(123, 200, 212) 100%);
+}
+
+.bannerWrapper {
+  width: 100vw;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 0 40px;
+  @media (max-width: 768px) {
+    height: 250px;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.bannerText {
+  position: absolute;
+  left: 120px;
+  @media (max-width: 1024px) {
+    position: unset;
+    padding: 0;
+    width: 100%;
+  }
+}
+
+.bannerCardWrapper {
+  --border-bottom-width: 1px;
+  --border-color: rgba(0, 0, 0, 0.05);
+  --border-left-width: 1px;
+  --border-right-width: 1px;
+  --border-style: solid;
+  --border-top-width: 1px;
+  backdrop-filter: blur(10px);
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 26px;
+  opacity: 1;
+  padding: 6px;
+  width: 460px;
+  height: 270px;
+  transform: translateY(0%);
+  transition: transform 0.5s, box-shadow 0.5s;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  right: 120px;
+  @media (max-width: 1024px) {
+    display: none;
+  }
+}
+
+.bannerCardWrapper:hover {
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
+  transform: translateY(-10%);
+}
+
+
+.bannerCardInner {
+  width: 100%;
+  height: 100%;
+  border-radius: 20px;
+  background: linear-gradient(rgba(255, 255, 255, 0.8) 0%, rgb(255, 255, 255) 100%);
+  display: flex;
+  flex-direction: column;
+  padding: 30px;
+  gap: 20px;
 }
