--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -239,10 +239,10 @@ a {
   }
 }
 
-.bannerCardWrapper:hover {
-  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);
-  transform: translateY(-10%);
-}
+/*.bannerCardWrapper:hover {*/
+/*  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.5);*/
+/*  transform: translateY(-10%);*/
+/*}*/
 
 .bannerCardInner {
   width: 100%;
