--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -226,3 +226,18 @@
 .programDetailBackground {
   background: radial-gradient(95.3% 100% at 50% 100%, #00f6ff 0%, rgb(255, 255, 255) 100%);
 }
+
+@keyframes ripple {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  50% {
+    transform: scale(1.5);
+    opacity: 0.5;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0;
+  }
+}
